# cookiecutter-flit

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
